--- a/package.json
+++ b/package.json
@@ -55,79 +55,79 @@
         "yup": "^0.29.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.26.0",
-        "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-        "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-        "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+        "@babel/core": "^7.12.1",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
+        "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+        "@babel/plugin-proposal-optional-chaining": "^7.12.1",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/plugin-transform-modules-commonjs": "^7.26.3",
-        "@babel/plugin-transform-react-jsx": "^7.25.9",
-        "@babel/plugin-transform-runtime": "^7.25.9",
-        "@babel/preset-env": "^7.26.0",
-        "@babel/preset-react": "^7.26.3",
-        "@babel/preset-typescript": "^7.26.0",
-        "@babel/runtime": "^7.26.0",
-        "@testing-library/dom": "^10.4.0",
-        "@testing-library/jest-dom": "^6.6.3",
-        "@testing-library/react": "^16.1.0",
-        "@testing-library/user-event": "^14.5.2",
-        "@types/codemirror": "^5.60.15",
-        "@types/debounce": "^1.2.4",
-        "@types/events": "^3.0.3",
-        "@types/jest": "^29.5.14",
-        "@types/node": "^22.10.5",
-        "@types/qrcode.react": "^3.0.0",
-        "@types/react": "^19.0.3",
-        "@types/react-copy-to-clipboard": "^5.0.7",
-        "@types/react-dom": "^19.0.2",
-        "@types/react-redux": "^7.1.34",
-        "@types/react-router": "^5.1.20",
-        "@types/react-router-dom": "^5.3.3",
-        "@types/react-transition-group": "^4.4.12",
-        "@types/styled-components": "^5.1.34",
-        "@types/uuid": "^10.0.0",
-        "@types/webpack-env": "^1.18.5",
-        "@types/yup": "^0.32.0",
-        "@typescript-eslint/eslint-plugin": "^8.19.1",
-        "@typescript-eslint/parser": "^8.19.1",
-        "autoprefixer": "^10.4.20",
-        "babel-jest": "^29.7.0",
-        "babel-loader": "^9.2.1",
-        "babel-plugin-styled-components": "^2.1.4",
-        "cross-env": "^7.0.3",
-        "css-loader": "^7.1.2",
-        "eslint": "^9.17.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-jest-dom": "^5.5.0",
+        "@babel/plugin-transform-modules-commonjs": "^7.18.2",
+        "@babel/plugin-transform-react-jsx": "^7.12.1",
+        "@babel/plugin-transform-runtime": "^7.12.1",
+        "@babel/preset-env": "^7.12.1",
+        "@babel/preset-react": "^7.12.1",
+        "@babel/preset-typescript": "^7.12.1",
+        "@babel/runtime": "^7.12.1",
+        "@testing-library/dom": "^8.14.0",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "12.1.5",
+        "@testing-library/user-event": "^14.2.1",
+        "@types/codemirror": "^0.0.98",
+        "@types/debounce": "^1.2.0",
+        "@types/events": "^3.0.0",
+        "@types/jest": "^28.1.3",
+        "@types/node": "^14.11.10",
+        "@types/qrcode.react": "^1.0.1",
+        "@types/react": "^16.14.0",
+        "@types/react-copy-to-clipboard": "^4.3.0",
+        "@types/react-dom": "^16.9.16",
+        "@types/react-redux": "^7.1.1",
+        "@types/react-router": "^5.1.3",
+        "@types/react-router-dom": "^5.1.3",
+        "@types/react-transition-group": "^4.4.0",
+        "@types/styled-components": "^5.1.7",
+        "@types/uuid": "^3.4.5",
+        "@types/webpack-env": "^1.15.2",
+        "@types/yup": "^0.29.3",
+        "@typescript-eslint/eslint-plugin": "^5.29.0",
+        "@typescript-eslint/parser": "^5.29.0",
+        "autoprefixer": "^10.4.7",
+        "babel-jest": "^28.1.1",
+        "babel-loader": "^8.2.5",
+        "babel-plugin-styled-components": "^2.0.7",
+        "cross-env": "^7.0.2",
+        "css-loader": "^5.2.7",
+        "eslint": "^8.18.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-jest-dom": "^4.0.2",
         "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^5.2.1",
-        "eslint-plugin-react": "^7.37.3",
-        "eslint-plugin-react-hooks": "^5.1.0",
-        "fork-ts-checker-webpack-plugin": "^9.0.2",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "fork-ts-checker-webpack-plugin": "^6.2.10",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^29.7.0",
-        "postcss": "^8.4.49",
-        "postcss-import": "^16.1.0",
-        "postcss-loader": "^8.1.1",
-        "postcss-nesting": "^13.0.1",
-        "postcss-preset-env": "^10.1.3",
-        "prettier": "^3.4.2",
-        "redux-devtools-extension": "^2.13.9",
-        "source-map-loader": "^5.0.0",
-        "style-loader": "^4.0.0",
-        "svg-url-loader": "^8.0.0",
-        "terser-webpack-plugin": "^5.3.11",
-        "ts-essentials": "^10.0.4",
-        "ts-jest": "^29.2.5",
-        "twin.macro": "^3.4.1",
-        "typescript": "^5.7.2",
-        "webpack": "^5.97.1",
-        "webpack-assets-manifest": "^5.2.1",
-        "webpack-bundle-analyzer": "^4.10.2",
-        "webpack-cli": "^6.0.1",
-        "webpack-dev-server": "^5.2.0",
-        "yarn-deduplicate": "^6.0.2"
+        "jest": "^28.1.1",
+        "postcss": "^8.4.14",
+        "postcss-import": "^14.1.0",
+        "postcss-loader": "^4.0.0",
+        "postcss-nesting": "^10.1.8",
+        "postcss-preset-env": "^7.7.1",
+        "prettier": "^2.7.1",
+        "redux-devtools-extension": "^2.13.8",
+        "source-map-loader": "^1.1.3",
+        "style-loader": "^2.0.0",
+        "svg-url-loader": "^7.1.1",
+        "terser-webpack-plugin": "^4.2.3",
+        "ts-essentials": "^9.1.2",
+        "ts-jest": "^28.0.5",
+        "twin.macro": "^2.8.2",
+        "typescript": "^4.7.3",
+        "webpack": "^4.43.0",
+        "webpack-assets-manifest": "^3.1.1",
+        "webpack-bundle-analyzer": "^3.8.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0",
+        "yarn-deduplicate": "^1.1.1"
     },
     "scripts": {
         "clean": "cd public/assets && find . \\( -name \"*.js\" -o -name \"*.map\" \\) -type f -delete",
